update z-index of main navigation: fix for magnific popup issue

--- a/assets/styles/components/_nav-main-menu.scss
+++ b/assets/styles/components/_nav-main-menu.scss
@@ -17,7 +17,7 @@
   *height: 46px;
   margin:0 auto;
   position: relative;
-  z-index:99999;
+  z-index: 500;  // this should be set to less than the magnific popup background div
   @include gs-media(d) {
     height: rhythm(6, 16px);
     @include padding-leader(2);
